# torrent-client

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
libs/sha1-0.2/: sha1.cpp  sha1.h
torrentfile/: BencodeInfo.cpp  BencodeInfo.h  BencodeTorrent.cpp  BencodeTorrent.h  TorrentFile.cpp  TorrentFile.h
